Bug 1267526 part.0 IMMHandler and TSFTextStore should use LazyLogModule instead of PR_NewLogModule for consistency with related logs in dom/events r=m_kato

MozReview-Commit-ID: IDmV291bKsz